--- a/test/fixtures/3levels/level2.sb.css
+++ b/test/fixtures/3levels/level2.sb.css
@@ -1,8 +1,8 @@
 :import {
-    -sb-from: './level3.sb.css';
-    -sb-default: style;
+    -st-from: './level3.sb.css';
+    -st-default: style;
 }
 
 .root {
-    -sb-type: style;
+    -st-type: style;
 }
